// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render App component 1`] = `
<div>
  <div
    id="SidebarSchedule"
  >
    <SidebarSchedule
      ramsSchedule={Array []}
    />
  </div>
</div>
`;

exports[`SidebarSchedule component should render SidebarSchedule component 1`] = `
<App>
  <div>
    <div
      id="SidebarSchedule"
    >
      <SidebarSchedule
        ramsSchedule={Array []}
      />
    </div>
  </div>
</App>
`;
